--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "dotenv": "4.0.0",
     "jest": "20.0.4",
     "webpack-dev-server": "2.5.1"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
