--- a/package.json
+++ b/package.json
@@ -5,59 +5,62 @@
   "author": "Chris E",
   "license": "MIT",
   "scripts": {
-    "build:dev": "webpack",
-    "build:prod": "webpack -p --env production",
-    "dev-server": "webpack-dev-server",
-    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild": "yarn run build:prod"
+    "heroku-postbuild": "npm run rb",
+    "analyze": "source-map-explorer build/static/js/*.js",
+    "rs": "react-scripts start",
+    "rb": "react-scripts build",
+    "rt": "react-scripts test",
+    "re": "react-scripts eject"
   },
   "dependencies": {
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
-    "babel-loader": "7.1.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.23.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1",
-    "css-loader": "0.28.4",
+    "express": "^4.17.3",
+    "firebase": "^9.6.7",
+    "history": "^5.3.0",
+    "moment": "^2.29.1",
+    "normalize.css": "7.0.0",
+    "numeral": "2.0.6",
+    "react": "^16.14.0",
+    "react-dates": "^21.8.0",
+    "react-dom": "^16.14.0",
+    "react-modal": "^3.0.0-rc2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "redux": "3.7.2",
+    "redux-thunk": "2.2.0",
+    "uuid": "3.1.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/runtime": "^7.17.2",
+    "cross-env": "5.0.5",
+    "dotenv": "4.0.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
-    "express": "4.15.4",
-    "extract-text-webpack-plugin": "3.0.0",
-    "firebase": "4.2.0",
-    "history": "4.7.2",
-    "moment": "2.18.1",
-    "node-sass": "4.5.3",
-    "normalize.css": "7.0.0",
-    "numeral": "2.0.6",
+    "jest": "^27.5.1",
+    "mini-css-extract-plugin": "^2.5.3",
+    "postcss-normalize": "^10.0.1",
     "raf": "3.3.2",
-    "react": "16.0.0",
-    "react-addons-shallow-compare": "15.6.0",
-    "react-dates": "12.7.0",
-    "react-dom": "16.0.0",
-    "react-modal": "^3.0.0-rc2",
-    "react-redux": "5.0.5",
-    "react-router-dom": "4.2.2",
-    "react-test-renderer": "16.0.0",
-    "redux": "3.7.2",
+    "react-scripts": "^5.0.0",
     "redux-mock-store": "1.2.3",
-    "redux-thunk": "2.2.0",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.18.2",
-    "uuid": "3.1.0",
-    "validator": "8.0.0",
-    "webpack": "3.1.0"
-  },
-  "devDependencies": {
-    "cross-env": "5.0.5",
-    "dotenv": "4.0.0",
-    "jest": "20.0.4",
-    "webpack-dev-server": "2.5.1"
+    "source-map-explorer": "^2.5.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "engines": {
-    "node": "10.x"
+    "node": "16.x",
+    "npm": "8.x"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
